# chainsolvers

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
chainsolvers/: __init__.py  helpers.py  io.py  locations.py  run.py  scoring_selection.py  types.py  visualizer.py
chainsolvers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chainsolvers/solvers/: carla.py  carla_plus.py
research/: eqasim_comparison.md  pyproject.toml  synthetic_world_calibration.md
research/block_a_audit/: AUDIT.txt  README.md  dp_sample_distfit_gauss.txt  gauss_hannover_anchor_subpop_raw.csv  gauss_hannover_dp_sample_tuned_calib.json  osm_hannover_anchor_subpop_raw.csv  osm_hannover_dp_sample_tuned_calib.json  two_zone_anchor_subpop_raw.csv  two_zone_dp_sample_tuned_calib.json
research/chainsolvers_eval/: __init__.py  baselines.py  calibration.py  depletion.py  external.py  interop.py  metrics.py  osm.py  regen.py  survey.py  synth.py  viz.py  worlds.py
research/scripts/: _gt_distdist.py  a2_robust.py  add_a3_solvers.py  add_carla_sample.py  add_carla_sample_runtime.py  add_dp_sample.py  add_dp_sample_tuned.py  add_rings_frontier.py  bake_worlds.py  benchmark_solvers.py  block_a.py  block_a_anchor_subpop.py  block_a_audit.py  block_a_cross.py  block_a_figs.py  block_a_figs_combined.py  block_a_figs_robust.py  block_a_outlier_probe.py  block_a_rerun_affected.py  block_a_style.py  block_b.py  block_b_1k_vs_50k.py  block_b_corr_figs.py  block_b_extra_figs.py  block_b_fig1_combined.py  block_b_fig2_dist.py  block_c.py  dp_sample_distfit.py  extract_homes.py  fetch_osm_topology.py  hannover_geometry_compare.py  mid_extract.py  palette_swatch.py  plot_block_b.py  plot_block_b_dist.py  plot_block_c.py  plot_block_c_final.py  plot_block_c_posthoc.py  plot_calibform.py  plot_twozone_vs_mid.py  (+10 more)
src/chainsolvers/: __init__.py  helpers.py  io.py  locations.py  run.py  scoring_selection.py  types.py  visualizer.py
src/chainsolvers/solvers/: carla.py  carla_plus.py  dp.py
tests/: test_integration_pipeline.py
tests/research/: test_baselines.py  test_depletion.py  test_eval_extensions.py  test_external.py  test_interop.py  test_regen.py  test_survey.py  test_synth.py
tests/unit/: test_configs_and_edgecases.py  test_connection_detection.py  test_dp_solvers.py  test_import_boundaries.py  test_locations_two_intersections.py
