[project]
name = "chainsolvers"
version = "0.1.0a2"
description = "Solvers for placing points along chains"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"                     # SPDX string (fixes the warning)
license-files = ["LICENSE*", "COPYING*"]

dependencies = [
    "numpy",
    "pandas",
    "frozendict",
    "scipy",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    # remove: "License :: OSI Approved :: MIT License"  (deprecated)
]

[project.optional-dependencies]
viz = [
    "folium",
    "networkx",
    "pyproj",
    "matplotlib",
]
