[project]
name = "chainsolvers"
version = "0.1.0"
description = "Solvers for placing points along chains"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE*", "COPYING*"]

dependencies = [
    "numpy",
    "pandas",
    "frozendict",
    "scipy",
    "pytest>=8.4.2",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
viz = [
    "folium",
    "networkx",
    "pyproj",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: only the library under src/chainsolvers is packaged/shipped.
# Research/eval code lives in research/ and is NOT part of the distributed wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/chainsolvers"]

[tool.pytest.ini_options]
# Library tests by default; research tests need the research package installed
# (pip install -e ./research) and live under tests/research.
testpaths = ["tests/unit"]
