[project]
name = "chainsolvers-eval"
version = "0.1.0"
description = "Research / evaluation harness for chainsolvers (NOT distributed). Synthetic-world generation, calibration, survey primitives, and comparison baselines."
requires-python = ">=3.9"

# Depends on the library; never the other way around. The import-direction test in
# tests/unit enforces that core never imports chainsolvers_eval.
dependencies = [
    "chainsolvers",
    "folium",
    "networkx",
    "pyproj",
    "matplotlib",
    "pyarrow", # parquet I/O for baked world snapshots (worlds.save_world/load_world)
    "seaborn>=0.13.2",
]

# Install the library editable from the repo root (src-layout) so `uv sync` tracks src/ live
# instead of re-copying a stale wheel (which silently drops new modules, e.g. solvers/dp.py).
[tool.uv.sources]
chainsolvers = { path = "..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chainsolvers_eval"]
